Support detailed smart-scale weight logs
